--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "music-bee-remote",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "main": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,16 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "ndjson": "^2.0.0",
+    "open": "^8.4.0",
     "socket.io": "^4.4.1"
+  },
+  "bin": "app.js",
+  "pkg": {
+    "assets": [
+      "../musicbee-remote-frontend/build/**"
+    ],
+    "outputPath": "dist"
   }
 }
